--- a/app/src/main/res/layout/fragment_new_post.xml
+++ b/app/src/main/res/layout/fragment_new_post.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
+
+    <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -12,3 +15,4 @@
         android:gravity="center"
         android:text="@string/typePost" />
 </RelativeLayout>
+</layout>
