--- a/app/src/main/res/layout/item_subcategory.xml
+++ b/app/src/main/res/layout/item_subcategory.xml
@@ -5,8 +5,8 @@
     <data>
 
         <variable
-            name="subcategoryViewModel"
-            type="com.example.asus.example.mvvm.ViewModel.ItemSubcategoryView" />
+            name="itemSubcategoryViewModel"
+            type="com.example.asus.example.mvvm.ViewModel.ItemSubcategoryViewModel" />
     </data>
 
 
