--- a/app/src/main/res/layout/fragment_new_post.xml
+++ b/app/src/main/res/layout/fragment_new_post.xml
@@ -1,7 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
 
+        <variable
+            name="itemUserViewModel"
+            type="com.example.asus.example.mvvm.ViewModel.ItemUserViewModel" />
+    </data>
     <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -13,6 +18,7 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:gravity="center"
-        android:text="@string/typePost" />
+        android:hint="@string/typePost"
+        android:text="@{}" />
 </RelativeLayout>
 </layout>
