--- a/app/src/main/res/layout/activity_navigation__drawer.xml
+++ b/app/src/main/res/layout/activity_navigation__drawer.xml
@@ -13,7 +13,16 @@
         <FrameLayout
             android:id="@+id/content_frame"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
+
+        </FrameLayout>
 
         <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
