--- a/app/src/main/res/layout/fragment_categories_event.xml
+++ b/app/src/main/res/layout/fragment_categories_event.xml
@@ -7,7 +7,10 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/create" />
         <android.support.v7.widget.RecyclerView
             android:id="@+id/categoriesEventCategoryRV"
             android:layout_width="match_parent"
