--- a/app/src/main/res/layout/fragment_personal_feed.xml
+++ b/app/src/main/res/layout/fragment_personal_feed.xml
@@ -9,7 +9,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
+        <Button
+            android:id="@+id/button"
+            android:layout_width="200dp"
+            android:layout_height="200dp" />
     <android.support.v7.widget.RecyclerView
         android:id="@+id/personalFeedPostRV"
         android:layout_width="match_parent"
