--- a/app/src/main/res/layout/fragment_user_search_input.xml
+++ b/app/src/main/res/layout/fragment_user_search_input.xml
@@ -6,6 +6,10 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/searchInputEditText">
 
+        <Button
+            android:id="@+id/uhar"
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="@dimen/searchInputEditText"
