--- a/app/src/main/res/layout/activity_navigation__drawer.xml
+++ b/app/src/main/res/layout/activity_navigation__drawer.xml
@@ -13,7 +13,15 @@
         <FrameLayout
             android:id="@+id/content_frame"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </android.support.v7.widget.Toolbar>
+        </FrameLayout>
 
         <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
