--- a/app/src/main/res/layout/item_event.xml
+++ b/app/src/main/res/layout/item_event.xml
@@ -43,6 +43,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        imageUrl="@{itemEventViewModel.imageUrl}"
         app:layout_constraintVertical_bias="0.045" />
 </android.support.constraint.ConstraintLayout>
 </layout>
