--- a/app/src/main/res/layout/nav_header_navigation__drawer_.xml
+++ b/app/src/main/res/layout/nav_header_navigation__drawer_.xml
@@ -2,12 +2,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
-
-        <variable
-            name="itemUserViewModel"
-            type="com.example.asus.example.mvvm.ViewModel.ItemUserViewModel" />
-    </data>
     <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
@@ -21,26 +15,24 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/navigationHeaderUserPictureIV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        imageUrl="@{itemUserViewModel.currentUserImageUrl}"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
     <TextView
+        android:id="@+id/NavigationHeaderUserMailTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="@{itemUserViewModel.currentUserName}"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/navigationHeaderUserNameTV"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@{itemUserViewModel.currentUserEmail}" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
 </layout>
