--- a/app/src/main/res/layout/fragment_categories_event.xml
+++ b/app/src/main/res/layout/fragment_categories_event.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
 
@@ -11,7 +12,11 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/categoriesEventCategoryRV"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="199dp"
+            android:layout_marginTop="48dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             tools:listitem="@layout/item_category">
 
         </android.support.v7.widget.RecyclerView>
