--- a/app/src/main/res/layout/fragment_new_event_in_category.xml
+++ b/app/src/main/res/layout/fragment_new_event_in_category.xml
@@ -24,15 +24,18 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:onClick="myClick"
+            android:onClick="@{()->itemCategoryViewModel.onCreateEventClick()}"
             android:text="@string/create"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/newEventInCategoryImageUrlET" />
+            app:layout_constraintTop_toBottomOf="@+id/newEventInCategoryImageUrlET"
+            app:layout_constraintVertical_bias="0.715" />
 
         <EditText
             android:id="@+id/newEventInCategoryNameET"
+            android:text="@={itemCategoryViewModel.inputName}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -48,13 +51,14 @@
 
         <EditText
             android:id="@+id/newEventInCategoryDescriptionET"
+            android:text="@={itemCategoryViewModel.inputDesc}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="44dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="44dp"
-            android:layout_marginTop="92dp"
+            android:layout_marginTop="56dp"
             android:ems="10"
             android:hint="@string/eventDescription"
             android:inputType="textMultiLine"
@@ -65,18 +69,35 @@
 
         <EditText
             android:id="@+id/newEventInCategoryImageUrlET"
+            android:text="@={itemCategoryViewModel.inputImageUrl}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="44dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="44dp"
-            android:layout_marginTop="148dp"
+            android:layout_marginTop="48dp"
             android:hint="@string/eventImageUrl"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.042"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/newEventInCategoryDescriptionET" />
+
+        <EditText
+            android:id="@+id/newEventInCategoryDateET"
+            android:text="@={itemCategoryViewModel.inputDate}"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="44dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="40dp"
+            android:hint="@string/eventDate"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/newEventInCategoryDescriptionET" />
+            app:layout_constraintTop_toBottomOf="@+id/newEventInCategoryImageUrlET" />
 
 
     </android.support.constraint.ConstraintLayout>
