--- a/app/src/main/res/layout/fragment_subcategories_event.xml
+++ b/app/src/main/res/layout/fragment_subcategories_event.xml
@@ -1,13 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
+
+
+<android.support.constraint.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/twoFragmentHeight">
+
+    <Button
+        android:id="@+id/newEventInCategoryButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="296dp"
+        android:layout_marginRight="296dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/subcategoriesEventSubcategoryRV"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/subcategoriesEventSubcategoryRV"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/twoFragmentHeight"
+        android:layout_height="196dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/newEventInCategoryButton"
         tools:listitem="@layout/item_subcategory">
 
     </android.support.v7.widget.RecyclerView>
+
+</android.support.constraint.ConstraintLayout>
 
 </layout>
