--- a/app/src/main/res/layout/fragment_subcategories_event.xml
+++ b/app/src/main/res/layout/fragment_subcategories_event.xml
@@ -27,7 +27,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/subcategoriesEventSubcategoryRV"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/createInCatOrSubcategoryRVHeight"
+            android:layout_height="176dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
@@ -36,7 +36,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            tools:listitem="@layout/item_subcategory"/>
+            tools:listitem="@layout/item_subcategory" />
     </android.support.constraint.ConstraintLayout>
 
 
